@@ -2,10 +2,10 @@
 log4j.rootCategory=DEBUG, stdout
 
 
-# Custom appender for logging most important messages only
-log4j.logger.core=INFO, core
+# Core logger
+log4j.logger.core=DEBUG, core, status, summary
 log4j.appender.core=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.core.Threshold=INFO
+log4j.appender.core.Threshold=DEBUG
 log4j.appender.core.File=logs/core.log
 log4j.appender.core.layout=org.apache.log4j.PatternLayout
 log4j.appender.core.layout.ConversionPattern=%d %p [%c] - %m%n
@@ -13,15 +13,21 @@ log4j.appender.core.DatePattern='.'yyyy-MM-dd
 log4j.appender.core.Append=true
 
 # Custom appender for logging most important messages only
-log4j.logger.status=INFO, status
 log4j.appender.status=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.status.Threshold=INFO
 log4j.appender.status.File=logs/status.log
 log4j.appender.status.layout=org.apache.log4j.PatternLayout
 log4j.appender.status.layout.ConversionPattern=%d %p [%c] - %m%n
-log4j.appender.status.DatePattern='.'yyyy-MM-dd
-log4j.appender.status.Append=false
+log4j.appender.status.DatePattern='.'yyyy-MM
+log4j.appender.status.Append=true
 
+#human friendly summary log
+log4j.appender.summary=org.apache.log4j.FileAppender
+log4j.appender.summary.Threshold=INFO
+log4j.appender.summary.File=logs/summary.log
+log4j.appender.summary.layout=org.apache.log4j.PatternLayout
+log4j.appender.summary.layout.ConversionPattern=%m%n
+log4j.appender.summary.Append=false
 
 # Standard output appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
