@@ -1,3 +1,6 @@
+Sep 18, 2019
+  improved logging: use log4j instead of System.out.println
+
 ver 1.3.9 May 7, 2019
   variant table name for human renamed to variant_clinvar
 
